[gd_scene load_steps=3 format=3 uid="uid://bjnrf6iw4i1t2"]

[ext_resource type="Script" path="res://scripts/survive_screen.gd" id="1_njedq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_03y0u"]
bg_color = Color(0, 0, 0, 1)

[node name="Survived" type="Node3D"]

[node name="SurviveScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_njedq")

[node name="Panel" type="Panel" parent="SurviveScreen"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_03y0u")

[node name="RichTextLabel" type="RichTextLabel" parent="SurviveScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -36.0
offset_right = 149.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 45
text = "You Survived"

[node name="TextTimer" type="Timer" parent="SurviveScreen"]
wait_time = 1.5
one_shot = true
autostart = true

[node name="MenuTimer" type="Timer" parent="SurviveScreen"]
wait_time = 1.5
one_shot = true

[node name="Camera3D" type="Camera3D" parent="."]

[connection signal="timeout" from="SurviveScreen/TextTimer" to="SurviveScreen" method="_on_text_timer_timeout"]
[connection signal="timeout" from="SurviveScreen/MenuTimer" to="SurviveScreen" method="_on_menu_timer_timeout"]
